# compute-engine

./: .bazelrc  .gitignore  .gitmodules  .lce_configure.bazelrc.bak  .tensorflow.bazelrc  BUILD  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  WORKSPACE  azure-pipelines.yml  build_pip_pkg.sh  configure.py  configure.sh  dev-requirements.txt  setup.cfg  setup.py  test-requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  pr_labels.yml  release-drafter.yml
.github/tools/: release_linux.sh
.github/workflows/: lint.yml  release-notes.yml  release.yml  unittests.yml
docs/: README.md  build.md  build_arm.md  build_legacy.md  converter.md  get_started.md  index.md  inference.md  mlir_converter.md  quickstart_android.md  roadmap.md
examples/: BUILD  converter_examples.py  detection.cc  example_model.tflite  lce_minimal.cc  modelconverter.py
ext/: arm_compiler.BUILD  eigen.BUILD
ext/gpu/: cuda_configure.bzl
ext/tf/: tf_configure.bzl
larq_compute_engine/: BUILD  __init__.py  cc_tests_aarch64_qemu.sh  cc_tests_arm32_qemu.sh  cc_tests_qemu.sh  download_compiler_placeholder.sh  requirements.in  requirements.txt
larq_compute_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
larq_compute_engine/cc/benchmark/: BUILD  bconv2d_bench.cc  bgemm_bench.cc  im2col_bench.cc  padding_bench.cc
larq_compute_engine/cc/core/: bconv2d_functor.h  bgemm_functor.h  fused_bgemm_functor.h  im2col_functor.h  packbits.h  padding_functor.h  util.h
larq_compute_engine/cc/kernels/: bconv2d.cc  compute_engine_kernels.cc  sign_kernels.cc
larq_compute_engine/cc/ops/: BUILD  bconv_shape_inference.cc  bconv_shape_inference.h  compute_engine_ops.cc
larq_compute_engine/cc/tests/: BUILD  bconv2d_tests.cc  bgemm_arm32_tests.cc  bgemm_tests.cc  cc_tests_aarch64_qemu.sh  cc_tests_arm32_qemu.sh  fused_bgemm_tests.cc  im2col_tests.cc  packbits_aarch64_tests.cc  packbits_arm32_tests.cc  packbits_bgemm_tests.cc  packbits_tests.cc
larq_compute_engine/cc/utils/: BUILD  macros.h  types.h
larq_compute_engine/core/: BUILD  bconv2d_functor.h  bconv2d_impl.h  bconv2d_impl_ref.h  bconv2d_output_transform.h  bgemm_functor.h  bgemm_impl.h  bgemm_impl_ref.h  bgemm_impl_ruy.h  bgemm_kernels_arm.h  bgemm_kernels_arm32.h  bgemm_kernels_arm64.h  bgemm_kernels_common.h  bgemm_kernels_ruy.h  bgemm_kernels_x86.h  bgemm_trmul_params.h  bitpack.h  bitpack_aarch64.h  bitpack_utils.h  bmaxpool.h  fused_bgemm_functor.h  im2col_functor.h  maxpool.h  packbits.h  packbits_aarch64.h  packbits_arm32.h  packbits_utils.h  padding_functor.h  ruy_pack.h  types.h
larq_compute_engine/core/bconv2d/: BUILD  optimized.h  optimized_bgemm.h  optimized_indirect_bgemm.h  output_transform.h  padding_functor.h  params.h  reference.h  zero_padding_correction.h
larq_compute_engine/core/benchmark/: BUILD  bgemm_bench.cc
larq_compute_engine/core/bgemm/: BUILD  bgemm.h  kernels.h  kernels_aarch64.h  kernels_arm32.h  kernels_common.h  ruy_pack.h  ruy_trmul_params.h
larq_compute_engine/core/bitpacking/: BUILD  bitpack.h  bitpack_aarch64.h  utils.h
larq_compute_engine/core/indirect_bgemm/: BUILD  kernel.h  kernel_4x2_portable.h  kernel_8x4x1_aarch64.h  kernel_8x4x2_aarch64.h  kernel_8x4x4_aarch64.h  prepare.h  select_kernel.h
larq_compute_engine/core/tests/: BUILD  bgemm_arm32_tests.cc  bgemm_tests.cc  bitpack_aarch64_tests.cc  bitpack_tests.cc  cc_tests_aarch64_qemu.sh  cc_tests_arm32_qemu.sh  packbits_aarch64_tests.cc  packbits_arm32_tests.cc  packbits_tests.cc
larq_compute_engine/mlir/: BUILD  lce_mlir_opt.cc  tf_lce_translate.cc  tf_tfl_passes.cc  tf_tfl_passes.h  tf_to_tfl_flatbuffer.cc  tf_to_tfl_flatbuffer.h
larq_compute_engine/mlir/ir/: dialect_registration.cc  lce_ops.cc  lce_ops.h  lce_ops.td
larq_compute_engine/mlir/python/: common.cc  common.h  converter.py  converter_test.py  end2end_test.py  graphdef_tfl_flatbuffer.cc  pybind_export.cc  saved_model_tfl_flatbuffer.cc  schema_py_generated.py  util.py
larq_compute_engine/mlir/quantization/: BUILD  calibration_wrapper.cc  operator_property.cc  quantize_model.cc  quantize_model.h
larq_compute_engine/mlir/tests/: BUILD  batchsize.mlir  bitpack-weights.mlir  const-fold.mlir  detection_postprocess.mlir  fuse_padding.mlir  lce_ops_options_test.cc  legalize-lce.mlir  lit_test.bzl  op-removal.mlir  optimize.mlir  prepare-tf.mlir  quantize.mlir  run_lit.sh  set_batch_size.mlir  translate-tflite.mlir
larq_compute_engine/mlir/transforms/: batchsize.cc  bitpack.cc  bitpack.h  bitpack_activations_patterns.td  bitpack_weights.cc  bitpack_weights_patterns.td  common.h  detection_postprocess.cc  fuse_padding.cc  fuse_padding.td  legalize_tflite.cc  op_removal.cc  op_removal_patterns.td  optimize.cc  optimize_patterns.td  optimize_patterns_common.td  optimize_patterns_target_arm.td  padding.h  passes.h  prepare_patterns.td  prepare_patterns_common.td  prepare_patterns_target_arm.td  prepare_tf.cc  quantize.cc  quantize_patterns.td  sanitize.cc  set_batch_size.cc  translate_tflite.cc  utils.h
larq_compute_engine/python/: modelconverter.py  utils.py
larq_compute_engine/python/benchmarks/: benchmark.py  benchmark_plots.ipynb  benchmarks_sign.py  plot_benchmarks.ipynb  run_benchmarks.py
larq_compute_engine/python/ops/: bconv2d_ops_test.py  bsign_ops_test.py  compute_engine_ops.py  compute_engine_ops_test.py
larq_compute_engine/python/tflite/: convert_birealnet.py  modelconverter.py  modelconverter_test.py
larq_compute_engine/python/util/: modelconverter.py
larq_compute_engine/tests/: BUILD  cc_tests_aarch64_qemu.sh  cc_tests_arm32_qemu.sh  convert_model.py  end2end_test.py  end2end_verify.cc  preprocess.py  qemu_test.bzl  strip_lcedequantize_test.py  test_aarch64_binary.sh  test_arm32_binary.sh
larq_compute_engine/tf/benchmark/: BUILD
larq_compute_engine/tf/ops/: BUILD  (+1 more)
larq_compute_engine/tflite/: BUILD  cc_tests_aarch64_qemu.sh  cc_tests_arm32_qemu.sh
tflite/: Makefile  build_aarch64_lib.sh  build_bbb_lib.sh  build_generic_aarch64_lib.sh  build_ios_universal_lib.sh  build_lib.sh  build_rpi_lib.sh  download_dependencies.sh
(+105 files in other folders)
